--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist docs",
     "prepublishOnly": "pnpm run clean && pnpm run build",
     "dev": "tsc --watch",
     "test": "jest",
@@ -18,6 +18,9 @@
     "test:ci": "jest --ci --coverage --watchAll=false",
     "lint": "eslint 'src/**/*.ts' 'tests/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' 'tests/**/*.ts' --fix",
+    "docs": "typedoc",
+    "docs:watch": "typedoc --watch",
+    "docs:serve": "typedoc && npx http-server docs -p 8080 -o",
     "prepare": "husky"
   },
   "keywords": [
@@ -49,6 +52,7 @@
     "jest": "^30.2.0",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.13",
     "typescript": "^5.0.0"
   },
   "engines": {
